tests/macros/float/page_size.rs
fn main() {
    inquisition::questions![float { page_size: todo!() }];
}
